Fix section spacing and textareas

--- a/src/noctis/form.sass
+++ b/src/noctis/form.sass
@@ -19,6 +19,10 @@ $form-border: thin solid black
     border-bottom: $form-border
     width: 100%
 
+  textarea
+    border: $form-border
+    width: 100%
+
   input[type="checkbox"]
     border: $form-border
     width: 1em
