--- a/src/noctis/noctis.sass
+++ b/src/noctis/noctis.sass
@@ -9,7 +9,7 @@
   .noctis-section-title
     @include theme.white-black-border
     @include theme.blue-solid
-    margin-bottom: 3px
+    margin-bottom: 1em
     padding-left: 2px
 
   .noctis-box
